--- a/Bulk_seq_data_loading/EDA_LOGFILE-SQL.ipynb
+++ b/Bulk_seq_data_loading/EDA_LOGFILE-SQL.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,8 @@
     "import numpy as np\n",
     "from sqlalchemy import create_engine\n",
     "import mysql.connector\n",
-    "import re"
+    "import re\n",
+    "import pickle"
    ]
   },
   {
@@ -162,6 +163,382 @@
    "outputs": [],
    "source": [
     "logfile.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### LOOKING AT GSE DIVERSITY IN CELL TYPES"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from seqfromsql import RNAseq_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine=create_engine('mysql+mysqlconnector://Simon:Bane@localhost/test_dream')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_names = engine.table_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_names.remove('big_test')\n",
+    "ct_names.remove('small_test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ct_gse_dict = {}\n",
+    "for ct in ct_names:\n",
+    "    sql_table = RNAseq_data([ct])\n",
+    "    sql_df = sql_table.all_data()\n",
+    "    col_names = sql_df[ct].select_dtypes(exclude=['object']).columns.to_numpy()\n",
+    "    ct_gse_dict[ct] = set(map(lambda x: re.search('gse_(GSE\\d+)',x).group(1), col_names))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['b_cells', 'basophils', 'cd4_t_cells', 'cd8_t_cells', 'dendritic_cells', 'effector_memory_cd8_t_cells', 'effector_memory_t_cells', 'endothelial', 'eosinophils', 'fibroblast', 'gc_b_cells', 'granulocytes', 'macrophage', 'memory_b_cells', 'memory_cd4_t_cells', 'memory_t_cells', 'monocytes', 'myeloid_dendritic_cells', 'naive_b_cells', 'naive_cd4_t_cells', 'naive_cd8_t_cells', 'naive_t_cells', 'neutrophils', 'nk_cells', 'pbmc', 'plasma_cells', 'plasmacytoid_dendritic_cells', 't_cells', 'th17_cells', 'th1_cells', 'th2_cells', 'tregs'])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ct_gse_dict.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('ct_gse.pckl','wb') as picklefile:\n",
+    "    pickle.dump(ct_gse_dict, picklefile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b_cells .... 14\n",
+      "basophils .... 1\n",
+      "cd4_t_cells .... 8\n",
+      "cd8_t_cells .... 8\n",
+      "dendritic_cells .... 4\n",
+      "effector_memory_cd8_t_cells .... 1\n",
+      "effector_memory_t_cells .... 1\n",
+      "endothelial .... 21\n",
+      "eosinophils .... 2\n",
+      "fibroblast .... 28\n",
+      "gc_b_cells .... 1\n",
+      "granulocytes .... 1\n",
+      "macrophage .... 8\n",
+      "memory_b_cells .... 3\n",
+      "memory_cd4_t_cells .... 2\n",
+      "memory_t_cells .... 1\n",
+      "monocytes .... 9\n",
+      "myeloid_dendritic_cells .... 2\n",
+      "naive_b_cells .... 3\n",
+      "naive_cd4_t_cells .... 2\n",
+      "naive_cd8_t_cells .... 1\n",
+      "naive_t_cells .... 1\n",
+      "neutrophils .... 4\n",
+      "nk_cells .... 6\n",
+      "pbmc .... 10\n",
+      "plasma_cells .... 1\n",
+      "plasmacytoid_dendritic_cells .... 4\n",
+      "t_cells .... 9\n",
+      "th17_cells .... 1\n",
+      "th1_cells .... 1\n",
+      "th2_cells .... 1\n",
+      "tregs .... 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ct, gse_set in ct_gse_dict.items():\n",
+    "    print(ct+' .... '+str(len(gse_set)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'GSE112101'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.search('gse_(GSE\\d+)',col_names[0]).group(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['gse_GSE112101__gsm_GSM3416597__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3057681__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3416599__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3416600__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3416591__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3416596__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3416593__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3416598__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3416592__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3057673__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3416594__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3416595__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3416601__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3416590__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3057680__norm_unknown',\n",
+       "       'gse_GSE112101__gsm_GSM3057676__norm_unknown',\n",
+       "       'gse_GSE114407__gsm_GSM3141140__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141145__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141150__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141155__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141160__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141165__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141170__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141175__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141180__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141185__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141190__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141195__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141200__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141205__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141210__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141215__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141220__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141225__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141232__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141243__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141248__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141253__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141258__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141263__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141268__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141273__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141278__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141283__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141288__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141293__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141298__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141303__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141308__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141313__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141318__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141323__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141328__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141333__norm_TPM',\n",
+       "       'gse_GSE114407__gsm_GSM3141338__norm_TPM',\n",
+       "       'gse_GSE66117__gsm_GSM1614656__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614657__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614658__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614659__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614660__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614661__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614662__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614663__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614664__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614665__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614666__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614667__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614668__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614669__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614670__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614671__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614672__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614673__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614674__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614675__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614676__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614677__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614678__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614679__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614680__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614681__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614682__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614683__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614684__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614685__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614686__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614687__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614688__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614689__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614690__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614691__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614692__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614693__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614694__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614695__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614696__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614697__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614698__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614699__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614700__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614701__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614702__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614705__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614706__norm_FPKM',\n",
+       "       'gse_GSE66117__gsm_GSM1614707__norm_FPKM',\n",
+       "       'gse_GSE109161__gsm_GSM2934385__norm_unknown',\n",
+       "       'gse_GSE109161__gsm_GSM2934386__norm_unknown',\n",
+       "       'gse_GSE109161__gsm_GSM2934387__norm_unknown',\n",
+       "       'gse_GSE109161__gsm_GSM2934388__norm_unknown',\n",
+       "       'gse_GSE109161__gsm_GSM2934389__norm_unknown',\n",
+       "       'gse_GSE109161__gsm_GSM2934390__norm_unknown',\n",
+       "       'gse_GSE109161__gsm_GSM2934391__norm_unknown',\n",
+       "       'gse_GSE109161__gsm_GSM2934392__norm_unknown',\n",
+       "       'gse_GSE109161__gsm_GSM2934393__norm_unknown',\n",
+       "       'gse_GSE109161__gsm_GSM2934394__norm_unknown',\n",
+       "       'gse_GSE109161__gsm_GSM2934395__norm_unknown',\n",
+       "       'gse_GSE109161__gsm_GSM2934396__norm_unknown',\n",
+       "       'gse_GSE107111__gsm_GSM2861424__norm_unknown',\n",
+       "       'gse_GSE107111__gsm_GSM2861425__norm_unknown',\n",
+       "       'gse_GSE107111__gsm_GSM2861426__norm_unknown',\n",
+       "       'gse_GSE107111__gsm_GSM2861427__norm_unknown',\n",
+       "       'gse_GSE107111__gsm_GSM2861428__norm_unknown',\n",
+       "       'gse_GSE107111__gsm_GSM2861429__norm_unknown',\n",
+       "       'gse_GSE112124__gsm_GSM3058171__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058184__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058175__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058166__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058167__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058165__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058176__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058181__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058177__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058172__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058178__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058183__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058173__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058174__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058179__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058182__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058185__norm_FPKM',\n",
+       "       'gse_GSE112124__gsm_GSM3058180__norm_FPKM',\n",
+       "       'gse_GSE114265__gsm_GSM3138614__norm_FPKM',\n",
+       "       'gse_GSE114514__gsm_GSM3143279__norm_FPKM',\n",
+       "       'gse_GSE114514__gsm_GSM3143280__norm_FPKM',\n",
+       "       'gse_GSE114514__gsm_GSM3143281__norm_FPKM',\n",
+       "       'gse_GSE114514__gsm_GSM3143282__norm_FPKM',\n",
+       "       'gse_GSE114514__gsm_GSM3143283__norm_FPKM',\n",
+       "       'gse_GSE114514__gsm_GSM3143284__norm_FPKM',\n",
+       "       'gse_GSE114514__gsm_GSM3143285__norm_FPKM',\n",
+       "       'gse_GSE114514__gsm_GSM3143286__norm_FPKM',\n",
+       "       'gse_GSE115653__gsm_GSM3186730__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186731__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186732__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186733__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186734__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186735__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186736__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186737__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186738__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186739__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186740__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186741__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186742__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186743__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186744__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186746__norm_unknown',\n",
+       "       'gse_GSE115653__gsm_GSM3186747__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262139__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262140__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262141__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262142__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262143__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262144__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262145__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262146__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262147__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262148__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262149__norm_unknown',\n",
+       "       'gse_GSE116810__gsm_GSM3262150__norm_unknown',\n",
+       "       'gse_GSE38233__gsm_GSM938897__norm_FPKM',\n",
+       "       'gse_GSE38233__gsm_GSM938898__norm_FPKM',\n",
+       "       'gse_GSE38233__gsm_GSM938899__norm_FPKM',\n",
+       "       'gse_GSE38233__gsm_GSM938900__norm_FPKM',\n",
+       "       'gse_GSE38233__gsm_GSM938901__norm_FPKM',\n",
+       "       'gse_GSE40783__gsm_GSM1001393__norm_RPKM',\n",
+       "       'gse_GSE40783__gsm_GSM1001394__norm_RPKM',\n",
+       "       'gse_GSE74974__gsm_GSM1939326__norm_FPKM',\n",
+       "       'gse_GSE74974__gsm_GSM1939327__norm_FPKM',\n",
+       "       'gse_GSE74974__gsm_GSM1939328__norm_FPKM',\n",
+       "       'gse_GSE74974__gsm_GSM1939329__norm_FPKM',\n",
+       "       'gse_GSE74974__gsm_GSM1939330__norm_FPKM',\n",
+       "       'gse_GSE74974__gsm_GSM1939331__norm_FPKM',\n",
+       "       'gse_GSE74974__gsm_GSM1939332__norm_FPKM',\n",
+       "       'gse_GSE74974__gsm_GSM1939333__norm_FPKM',\n",
+       "       'gse_GSE74974__gsm_GSM1939334__norm_FPKM',\n",
+       "       'gse_GSE78930__gsm_GSM2081378__norm_FPKM',\n",
+       "       'gse_GSE78930__gsm_GSM2081379__norm_FPKM',\n",
+       "       'gse_GSE78930__gsm_GSM2081380__norm_FPKM',\n",
+       "       'gse_GSE78930__gsm_GSM2081377__norm_FPKM'], dtype=object)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "col_names"
    ]
   },
   {
