--- a/Bulk_seq_data_loading/RNAseq_data_class.ipynb
+++ b/Bulk_seq_data_loading/RNAseq_data_class.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,8 @@
     "    import sqlalchemy as sqal\n",
     "    import mysql.connector\n",
     "    \n",
-    "    engine = sqal.create_engine('mysql+mysqlconnector://dream_user:dream_sql_pw@192.168.130.192/test_dream')\n",
+    "    #engine = sqal.create_engine('mysql+mysqlconnector://dream_user:dream_sql_pw@192.168.144.21/test_dream')\n",
+    "    engine = sqal.create_engine('mysql+mysqlconnector://Simon:Bane@localhost/test_dream')\n",
     "    \n",
     "    # basic attributes\n",
     "    def __init__(self, ct=None, norm='FPKM',  scope='fine'):\n",
@@ -105,7 +106,7 @@
     "            print('Usage Error: scope must be of type \\'course\\' or \\'fine\\' (default)')\n",
     "            return\n",
     "        \n",
-    "    def all_data(self):\n",
+    "    def allData(self):\n",
     "        df_dict = {}\n",
     "        for celltype in self.ct:\n",
     "            df = self.pd.read_sql_table(celltype, con=self.engine, )\n",
@@ -113,13 +114,13 @@
     "            df_dict[celltype] = df\n",
     "        return df_dict\n",
     "    \n",
-    "    def norm_data(self):\n",
+    "    def normData(self):\n",
     "        df_dict = {}\n",
     "        for celltype in self.ct:\n",
     "            df = self.pd.read_sql_table(celltype, con=self.engine)\n",
     "            df.drop('index', 1, inplace=True)\n",
     "            sampleNames = df.select_dtypes(exclude=['object']).columns.to_numpy()\n",
-    "            sampleNames_idx = list(map(lambda x: re.search('norm_(.*)',x).group(1) == self.norm, sampleNames))\n",
+    "            sampleNames_idx = list(map(lambda x: self.re.search('norm_(.*)',x).group(1) == self.norm, sampleNames))\n",
     "            sampleNames_norm = sampleNames[sampleNames_idx]\n",
     "            sampleNames_norm = self.np.insert(sampleNames_norm,0,'gene_symbol_sql')\n",
     "            if len(sampleNames_norm) == 1:\n",
@@ -128,278 +129,60 @@
     "                df = df[sampleNames_norm]\n",
     "            df_dict[celltype] = df\n",
     "        return df_dict\n",
-    "        "
+    "        \n",
+    "    def mergeCellTypes(self):\n",
+    "        # holds the merged df and cell type list\n",
+    "        merge_dict = {}\n",
+    "        merge_dict['cellTypes'] = [] \n",
+    "        initial = 0\n",
+    "        ct_dfs = self.normData()\n",
+    "        for celltype in ct_dfs.keys():\n",
+    "            if initial == 1:\n",
+    "                merge_df = ct_dfs[celltype]\n",
+    "                merge_df.set_index(merge_df['gene_symbol_sql'], inplace=True)\n",
+    "                merge_df.drop(['gene_symbol_sql'], 1, inplace=True)\n",
+    "                df = df.join(merge_df, how = 'inner')\n",
+    "                merge_dict['cellTypes'].extend([celltype] * len(merge_df.columns))\n",
+    "            else:\n",
+    "                df = ct_dfs[celltype]\n",
+    "                df.set_index(df['gene_symbol_sql'], inplace=True)\n",
+    "                df.drop(['gene_symbol_sql'], 1, inplace=True)\n",
+    "                merge_dict['cellTypes'].extend([celltype] * len(df.columns))\n",
+    "                initial = 1\n",
+    "        df.dropna(inplace=True)\n",
+    "        merge_dict['merged_df'] = df\n",
+    "        return merge_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test=RNAseq_data(['tregs'],'FPKM')\n",
-    "test_df=test.data()"
+    "test=RNAseq_data(['fibroblast','b_cells'],'FPKM')\n",
+    "test_df=test.mergeCellTypes()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(61434, 16)\n"
-     ]
-    },
-    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>gene_symbol_sql</th>\n",
-       "      <th>gse_GSE111634__gsm_GSM3036069__norm_FPKM</th>\n",
-       "      <th>gse_GSE111634__gsm_GSM3036070__norm_FPKM</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039712__norm_unknown</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039713__norm_unknown</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039714__norm_unknown</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039715__norm_unknown</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039716__norm_unknown</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039717__norm_unknown</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039718__norm_unknown</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039719__norm_unknown</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039720__norm_unknown</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039721__norm_unknown</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039722__norm_unknown</th>\n",
-       "      <th>gse_GSE111789__gsm_GSM3039723__norm_unknown</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1/2-SBSRNA4</td>\n",
-       "      <td>0.221</td>\n",
-       "      <td>0.400</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>A1BG</td>\n",
-       "      <td>0.902</td>\n",
-       "      <td>0.384</td>\n",
-       "      <td>14.403954</td>\n",
-       "      <td>13.925646</td>\n",
-       "      <td>17.892528</td>\n",
-       "      <td>20.816148</td>\n",
-       "      <td>8.777654</td>\n",
-       "      <td>9.281962</td>\n",
-       "      <td>7.528681</td>\n",
-       "      <td>11.89128</td>\n",
-       "      <td>17.685922</td>\n",
-       "      <td>9.873238</td>\n",
-       "      <td>20.867806</td>\n",
-       "      <td>11.199678</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>A1BG-AS1</td>\n",
-       "      <td>0.301</td>\n",
-       "      <td>0.467</td>\n",
-       "      <td>40.179450</td>\n",
-       "      <td>48.275572</td>\n",
-       "      <td>50.852448</td>\n",
-       "      <td>52.492895</td>\n",
-       "      <td>13.793456</td>\n",
-       "      <td>19.595252</td>\n",
-       "      <td>15.893881</td>\n",
-       "      <td>23.78256</td>\n",
-       "      <td>48.636287</td>\n",
-       "      <td>58.142403</td>\n",
-       "      <td>43.039850</td>\n",
-       "      <td>60.798252</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>A1CF</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.008</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>A2LD1</td>\n",
-       "      <td>6.632</td>\n",
-       "      <td>6.464</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   index gene_symbol_sql  gse_GSE111634__gsm_GSM3036069__norm_FPKM  \\\n",
-       "0      0     1/2-SBSRNA4                                     0.221   \n",
-       "1      1            A1BG                                     0.902   \n",
-       "2      2        A1BG-AS1                                     0.301   \n",
-       "3      3            A1CF                                     0.000   \n",
-       "4      4           A2LD1                                     6.632   \n",
-       "\n",
-       "   gse_GSE111634__gsm_GSM3036070__norm_FPKM  \\\n",
-       "0                                     0.400   \n",
-       "1                                     0.384   \n",
-       "2                                     0.467   \n",
-       "3                                     0.008   \n",
-       "4                                     6.464   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039712__norm_unknown  \\\n",
-       "0                                          NaN   \n",
-       "1                                    14.403954   \n",
-       "2                                    40.179450   \n",
-       "3                                     0.000000   \n",
-       "4                                          NaN   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039713__norm_unknown  \\\n",
-       "0                                          NaN   \n",
-       "1                                    13.925646   \n",
-       "2                                    48.275572   \n",
-       "3                                     0.000000   \n",
-       "4                                          NaN   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039714__norm_unknown  \\\n",
-       "0                                          NaN   \n",
-       "1                                    17.892528   \n",
-       "2                                    50.852448   \n",
-       "3                                     0.000000   \n",
-       "4                                          NaN   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039715__norm_unknown  \\\n",
-       "0                                          NaN   \n",
-       "1                                    20.816148   \n",
-       "2                                    52.492895   \n",
-       "3                                     0.000000   \n",
-       "4                                          NaN   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039716__norm_unknown  \\\n",
-       "0                                          NaN   \n",
-       "1                                     8.777654   \n",
-       "2                                    13.793456   \n",
-       "3                                     0.000000   \n",
-       "4                                          NaN   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039717__norm_unknown  \\\n",
-       "0                                          NaN   \n",
-       "1                                     9.281962   \n",
-       "2                                    19.595252   \n",
-       "3                                     0.000000   \n",
-       "4                                          NaN   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039718__norm_unknown  \\\n",
-       "0                                          NaN   \n",
-       "1                                     7.528681   \n",
-       "2                                    15.893881   \n",
-       "3                                     0.000000   \n",
-       "4                                          NaN   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039719__norm_unknown  \\\n",
-       "0                                          NaN   \n",
-       "1                                     11.89128   \n",
-       "2                                     23.78256   \n",
-       "3                                      0.00000   \n",
-       "4                                          NaN   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039720__norm_unknown  \\\n",
-       "0                                          NaN   \n",
-       "1                                    17.685922   \n",
-       "2                                    48.636287   \n",
-       "3                                     0.000000   \n",
-       "4                                          NaN   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039721__norm_unknown  \\\n",
-       "0                                          NaN   \n",
-       "1                                     9.873238   \n",
-       "2                                    58.142403   \n",
-       "3                                     0.000000   \n",
-       "4                                          NaN   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039722__norm_unknown  \\\n",
-       "0                                          NaN   \n",
-       "1                                    20.867806   \n",
-       "2                                    43.039850   \n",
-       "3                                     0.000000   \n",
-       "4                                          NaN   \n",
-       "\n",
-       "   gse_GSE111789__gsm_GSM3039723__norm_unknown  \n",
-       "0                                          NaN  \n",
-       "1                                    11.199678  \n",
-       "2                                    60.798252  \n",
-       "3                                     0.000000  \n",
-       "4                                          NaN  "
+       "(4658, 202)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(test_df.shape)\n",
-    "test_df.head()"
+    "merge_df = test_df['merged_df']\n",
+    "merge_df.shape"
    ]
   },
   {
