--- a/Bulk_seq_data_loading/RNAseq_data_class.ipynb
+++ b/Bulk_seq_data_loading/RNAseq_data_class.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +50,7 @@
     "    pd = __import__('pandas')\n",
     "    np = __import__('numpy')\n",
     "    re = __import__('re')\n",
+    "    pk = __import__('pickle')\n",
     "    #from sqlalchemy import create_engine \n",
     "    import sqlalchemy as sqal\n",
     "    import mysql.connector\n",
@@ -85,8 +86,13 @@
     "            print('Instantiate class with: RNAseq_data(CELL TYPE, NORMALIZATION, SCOPE) \\n \\n'\n",
     "                  'where CELL TYPE is a list of cell types. Must be one or more of:'+str(cell_types)+'\\n\\n'\n",
     "                  'where NORMALIZATION is how the counts are normalized. Must be one of: '+str(norm_types)+'\\n\\n'\n",
-    "                  'where SCOPE is the cell type specificity. Must be either \\'fine\\'(default) or \\'course\\'')\n",
+    "                  'where SCOPE is the cell type specificity. Must be either \\'fine\\'(default) or \\'coarse\\'')\n",
     "            return\n",
+    "        \n",
+    "        with open('CellType.pkl', 'rb') as ctDictFile:\n",
+    "            cellDict = self.pk.load(ctDictFile)\n",
+    "            coarse_ctDict = cellDict['Coarse']['Main']\n",
+    "            coarseCells = coarse_ctDict.keys()\n",
     "        \n",
     "        if isinstance(ct,(list,)):\n",
     "            self.ct = ct\n",
@@ -100,34 +106,87 @@
     "            print('Usage Error: normalization method must be one of: '+str(norm_types))\n",
     "            return\n",
     "        \n",
-    "        if scope in ['course','fine']:\n",
+    "        self.ctDict = {}\n",
+    "        if scope in ['coarse','fine']:\n",
     "            self.scope = scope\n",
+    "            if scope == 'coarse':\n",
+    "                if all(cell in coarseCells for cell in ct):\n",
+    "                    for cell in ct:\n",
+    "                        self.ctDict[cell] = coarse_ctDict[cell]\n",
+    "                else:\n",
+    "                    print('Usage Error: Specified cell type not a coarse cell type \\n')\n",
+    "                    print('Must be one or more of: \\n'+str(coarseCells))\n",
+    "                    return\n",
     "        else:\n",
-    "            print('Usage Error: scope must be of type \\'course\\' or \\'fine\\' (default)')\n",
+    "            print('Usage Error: scope must be of type \\'coarse\\' or \\'fine\\' (default)')\n",
     "            return\n",
-    "        \n",
+    "    \n",
+    "    def mergeTest():\n",
+    "        #check too make sure not too many NAs exist...\n",
+    "        pass\n",
+    "    \n",
     "    def allData(self):\n",
     "        df_dict = {}\n",
-    "        for celltype in self.ct:\n",
-    "            df = self.pd.read_sql_table(celltype, con=self.engine, )\n",
-    "            df.drop('index', 1, inplace=True)\n",
-    "            df_dict[celltype] = df\n",
+    "        if len(self.ctDict) > 0:\n",
+    "            for celltype in self.ctDict.keys():\n",
+    "                token = 0\n",
+    "                for subcell in self.ctDict[celltype]:\n",
+    "                    try:\n",
+    "                        df = self.pd.read_sql_table(subcell, con=self.engine, )\n",
+    "                        df.drop('index', 1, inplace=True)\n",
+    "                        df.set_index('gene_symbol_sql', inplace=True)\n",
+    "                        if token == 0:\n",
+    "                            token = 1\n",
+    "                            df_dict[celltype] = df\n",
+    "                        else:\n",
+    "                            df_dict[celltype] = df_dict[celltype].join(df, how='inner')\n",
+    "                    except:\n",
+    "                        pass\n",
+    "        else: \n",
+    "            for celltype in self.ct:\n",
+    "                df = self.pd.read_sql_table(celltype, con=self.engine, )\n",
+    "                df.drop('index', 1, inplace=True)\n",
+    "                df_dict[celltype] = df\n",
     "        return df_dict\n",
     "    \n",
     "    def normData(self):\n",
     "        df_dict = {}\n",
-    "        for celltype in self.ct:\n",
-    "            df = self.pd.read_sql_table(celltype, con=self.engine)\n",
-    "            df.drop('index', 1, inplace=True)\n",
-    "            sampleNames = df.select_dtypes(exclude=['object']).columns.to_numpy()\n",
-    "            sampleNames_idx = list(map(lambda x: self.re.search('norm_(.*)',x).group(1) == self.norm, sampleNames))\n",
-    "            sampleNames_norm = sampleNames[sampleNames_idx]\n",
-    "            sampleNames_norm = self.np.insert(sampleNames_norm,0,'gene_symbol_sql')\n",
-    "            if len(sampleNames_norm) == 1:\n",
-    "                df = None\n",
-    "            else: \n",
-    "                df = df[sampleNames_norm]\n",
-    "            df_dict[celltype] = df\n",
+    "        if len(self.ctDict) > 0:\n",
+    "            for celltype in self.ctDict.keys():\n",
+    "                token = 0\n",
+    "                for subcell in self.ctDict[celltype]:\n",
+    "                    try:\n",
+    "                        df = self.pd.read_sql_table(subcell, con=self.engine)\n",
+    "                        df.drop('index', 1, inplace=True)\n",
+    "                        df.set_index('gene_symbol_sql', inplace=True)\n",
+    "                        sampleNames = df.select_dtypes(exclude=['object']).columns\n",
+    "                        sampleNames_idx = list(map(lambda x: self.re.search('norm_(.*)',x).group(1) == self.norm, sampleNames))\n",
+    "                        sampleNames_norm = sampleNames[sampleNames_idx]\n",
+    "                        if len(sampleNames_norm) == 1:\n",
+    "                            df = None\n",
+    "                            continue\n",
+    "                        else:\n",
+    "                            df = df[sampleNames_norm]\n",
+    "                        if token == 0:\n",
+    "                            token = 1\n",
+    "                            df_dict[celltype] = df\n",
+    "                        else:\n",
+    "                            df_dict[celltype] = df_dict[celltype].join(df, how='inner')\n",
+    "                    except:\n",
+    "                        pass\n",
+    "        else:\n",
+    "            for celltype in self.ct:\n",
+    "                df = self.pd.read_sql_table(celltype, con=self.engine)\n",
+    "                df.drop('index', 1, inplace=True)\n",
+    "                sampleNames = df.select_dtypes(exclude=['object']).columns.to_numpy()\n",
+    "                sampleNames_idx = list(map(lambda x: self.re.search('norm_(.*)',x).group(1) == self.norm, sampleNames))\n",
+    "                sampleNames_norm = sampleNames[sampleNames_idx]\n",
+    "                sampleNames_norm = self.np.insert(sampleNames_norm,0,'gene_symbol_sql')\n",
+    "                if len(sampleNames_norm) == 1:\n",
+    "                    df = None\n",
+    "                else: \n",
+    "                    df = df[sampleNames_norm]\n",
+    "                df_dict[celltype] = df\n",
     "        return df_dict\n",
     "        \n",
     "    def mergeCellTypes(self):\n",
@@ -156,12 +215,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "test=RNAseq_data(['fibroblast','b_cells'],'FPKM')\n",
-    "test_df=test.mergeCellTypes()"
+    "test=RNAseq_data(['b'],'FPKM','coarse')\n",
+    "# test_df=test.mergeCellTypes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coarse_b=test.normData()"
    ]
   },
   {
@@ -187,11 +255,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(52648, 95)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test_df.to_csv('tregs.csv')"
+    "coarse_b['b'].shape"
    ]
   },
   {
